Swich from generic to personal content

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+.DS_Store
+.directory
+
+*.swp
+*~
+
+Gemfile.lock
+
 *.gem
 .bundle
-.DS_Store
+vendor
+
 .sass-cache
-_site
-Gemfile.lock
 .jekyll-cache
+
+_site
